--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Send greeting
       run: |
         echo "Hello ${{ github.event.inputs.name }}"
-        ls
+        echo $(ls)
       
