--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,6 +27,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        path: main
       
     # Runs a single command using the runners shell
     - name: Send greeting
