--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -35,4 +35,6 @@ jobs:
       run: |
         echo "Hello ${{ github.event.inputs.name }}"
         ls -a
+        echo "---------"
+        pwd
       
